--- a/redepse/package.json
+++ b/redepse/package.json
@@ -12,7 +12,7 @@
     "jose": "^6.0.11",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
-    "next": "15.3.0",
+    "next": "^15.4.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4"
